downgrade JDK version to 11