@@ -2,8 +2,17 @@ package compile.llvm.type;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public record ArrayType(Type baseType, int arraySize) implements Type {
+public final class ArrayType implements Type {
+    private final Type baseType;
+    private final int arraySize;
+
+    public ArrayType(Type baseType, int arraySize) {
+        this.baseType = baseType;
+        this.arraySize = arraySize;
+    }
+
     @Override
     public int getSize() {
         return baseType.getSize() * arraySize;
@@ -11,15 +20,18 @@ public record ArrayType(Type baseType, int arraySize) implements Type {
 
     public Type getScalarType() {
         Type type = this;
-        while (type instanceof ArrayType arrayType)
+        while (type instanceof ArrayType) {
+            ArrayType arrayType = (ArrayType) type;
             type = arrayType.baseType;
+        }
         return type;
     }
 
     public List<ArrayType> getArrayTypes() {
         List<ArrayType> arrayTypes = new ArrayList<>();
         Type type = this;
-        while (type instanceof ArrayType arrayType) {
+        while (type instanceof ArrayType) {
+            ArrayType arrayType = (ArrayType) type;
             arrayTypes.add(arrayType);
             type = arrayType.baseType;
         }
@@ -27,7 +39,16 @@ public record ArrayType(Type baseType, int arraySize) implements Type {
     }
 
     public List<Integer> getArraySizes() {
-        return getArrayTypes().stream().map(ArrayType::arraySize).toList();
+        return getArrayTypes().stream().map(ArrayType::arraySize).collect(Collectors.toList());
+    }
+
+    @Override
+    public Type baseType() {
+        return baseType;
+    }
+
+    public int arraySize() {
+        return arraySize;
     }
 
     @Override
